# Language-Interpreter

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json  text.txt
include/lexer/: scanner.hpp  token.hpp
include/parser/: error.hpp  expr.hpp  mod.hpp
src/: main.cpp
src/lexer/: scanner.cpp
src/parser/: mod.cpp
